[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/Scripts/Main/MainMenuAndSubMenus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Game/Assets/Images/Experimental/CardBack.png" type="Texture" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 1032.0
margin_bottom = 608.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 467.431
margin_top = 525.085
margin_right = 628.431
margin_bottom = 569.085
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="."]
margin_left = 473.335
margin_top = 453.398
margin_right = 624.335
margin_bottom = 497.398
text = "Credits"

[node name="SettingsButton" type="Button" parent="."]
margin_left = 478.339
margin_top = 381.733
margin_right = 623.339
margin_bottom = 423.733
text = "Settings"

[node name="PlayButton" type="Button" parent="."]
margin_left = 471.0
margin_top = 249.353
margin_right = 619.0
margin_bottom = 293.353
text = "Play"

[node name="BrowseCardsButton" type="Button" parent="."]
margin_left = 488.471
margin_top = 317.24
margin_right = 611.471
margin_bottom = 358.24
text = "Browse Cards"

[node name="Logo" type="Sprite" parent="."]

[node name="CardBack" type="Sprite" parent="Logo"]
position = Vector2( 540.905, 114.145 )
scale = Vector2( 2.54841, 1.70747 )
texture = ExtResource( 2 )
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="BrowseCardsButton" to="." method="_on_BrowseCardsButton_pressed"]
